# foundation

./: .appveyor.yml  .gitignore  .haskell-ci  .hlint.yaml  .travis.yml  .weeder.yaml  CHANGELOG.md  Collection.md  Core.hs  Foundation.hs  LICENSE  Overture.hs  README.md  TODO.md  appveyor.yml  cabal.haskell-ci  cabal.project  foundation.cabal  mkdocs.yml  stack-8.2.yaml  stack.yaml  with-edge.yaml
.github/workflows/: haskell-ci.yml  main.yml
.travis/: stack-ghc-7.10.yaml  stack-ghc-7.8.yaml  stack-ghc-8.0-edge.yaml  stack-ghc-8.0.yaml  stack-ghc-8.2.yaml  stack-lts-3.22.yaml  stack-lts-8.3.yaml  stack-nightly.yaml
Core/: Array.hs  Chunks.hs  Collection.hs  Convertible.hs  Foreign.hs  IO.hs  Idea.hs  Number.hs  Partial.hs  Primitive.hs  Proxy.hs  Strict.hs  String.hs  Tuple.hs  VFS.hs  Vector.hs  View.hs
Core/Array/: Bitmap.hs  Boxed.hs  Common.hs  Internal.hs  Unboxed.hs
Core/Collection/: Element.hs  Foldable.hs  Indexed.hs  InnerFunctor.hs  Iterable.hs  Keyed.hs  List.hs  Mutable.hs  Sequential.hs  Zipable.hs  Zippable.hs
Core/Data/: STuple.hs  STupleNat.hs
Core/Foreign/: MemoryMap.hs
Core/IO/: File.hs  Terminal.hs
Core/Internal/: Base.hs  Identity.hs  IsList.hs  MonadTrans.hs  PrimTypes.hs  Primitive.hs  Proxy.hs  Types.hs
Core/Primitive/: FinalPtr.hs  Monad.hs  Types.hs  Utils.hs
Core/String/: IO.hs  Internal.hs  ModifiedUTF8.hs  UTF8.hs  UTF8LL.hs  UTF8Table.hs
Core/System/: Info.hs
Core/Tuple/: Nth.hs
Core/VFS/: FilePath.hs  Path.hs  URI.hs
Core/Vector/: Bits.hs  Boxed.hs  Common.hs  Unboxed.hs
Foundation/: Array.hs  Bifunctor.hs  Bits.hs  Check.hs  Collection.hs  Conduit.hs  Convertible.hs  Exception.hs  Foreign.hs  IO.hs  Monad.hs  Number.hs  Numerical.hs  Parser.hs  Partial.hs  Primitive.hs  Random.hs  String.hs  These.hs  Timing.hs  Tuple.hs  UUID.hs
Foundation/Array/: ArrayUArray.hs  Bitmap.hs  Boxed.hs  Common.hs  Internal.hs  MultiArray.hs  Unboxed.hs
Foundation/Boot/: Builder.hs  List.hs
Foundation/Check/: Arbitrary.hs  Config.hs  Gen.hs  Main.hs  Print.hs  Property.hs  Types.hs
Foundation/Class/: Bifunctor.hs  Monoid.hs  Semigroup.hs  Storable.hs
Foundation/Collection/: Buildable.hs  Collection.hs  Copy.hs  Element.hs  Foldable.hs  Indexed.hs  InnerFunctor.hs  Keyed.hs  List.hs  Mapable.hs  Mappable.hs  Mutable.hs  NonEmpty.hs  Sequential.hs  Zippable.hs
Foundation/Conduit/: Internal.hs  Textual.hs
Foundation/Foreign/: Alloc.hs  MemoryMap.hs
Foundation/Format/: CSV.hs
Foundation/Hashing/: FNV.hs  Hashable.hs  Hasher.hs  SipHash.hs
Foundation/IO/: File.hs  FileMap.hs  Handle.hs  Terminal.hs
Foundation/Internal/: Base.hs  Bifunctor.hs  ByteSwap.hs  CallStack.hs  Environment.hs  Error.hs  ExtList.hs  Identity.hs  IsList.hs  MonadTrans.hs  Natural.hs  NumLiteral.hs  PrimTypes.hs  Primitive.hs  Proxy.hs  Typeable.hs  Types.hs
Foundation/JSON/: Parse.hs  Types.hs
Foundation/List/: DList.hs  ListN.hs  SList.hs
Foundation/Math/: Trigonometry.hs
Foundation/Monad/: Base.hs  Except.hs  Exception.hs  Identity.hs  MonadIO.hs  Reader.hs  State.hs  Transformer.hs
Foundation/Network/: Address.hs  Address.hsc  HostName.hs  HostName.hsc  IPv4.hs  IPv6.hs  Service.hs  Socket.hs
Foundation/Numerical/: Additive.hs  Floating.hs  Multiplicative.hs  Number.hs  Primitives.hs  Subtractive.hs
Foundation/Primitive/: Base16.hs  Block.hs  BlockN.hs  (+23 more)
app/: Main.hs
basement/: basement.cabal
basement/Basement/: Algorithm.hs  Base16.hs  Bits.hs  Block.hs  BlockN.hs  Bounded.hs  BoxedArray.hs  Cast.hs  Error.hs  Exception.hs  FinalPtr.hs  Floating.hs  From.hs  HeadHackageUtils.hs  Imports.hs  IntegralConv.hs  Monad.hs  Nat.hs  NormalForm.hs  PrimType.hs  String.hs  Terminal.hs  These.hs  Types.hs  UArray.hs  Utils.hs
basement/Basement/Alg/: Class.hs  Mutable.hs  PrimArray.hs  String.hs  UTF8.hs
basement/Basement/Alg/Foreign/: Prim.hs  PrimArray.hs  String.hs  UTF8.hs
basement/Basement/Alg/Native/: Prim.hs  PrimArray.hs  String.hs  UTF8.hs
basement/Basement/Bindings/: Memory.hs
basement/Basement/Block/: Base.hs  Builder.hs  Mutable.hs
basement/Basement/Compat/: AMP.hs  Base.hs  Bifunctor.hs  ExtList.hs  MonadTrans.hs  Natural.hs  NumLiteral.hs  PrimTypes.hs  Primitive.hs  Semigroup.hs
basement/Basement/Compat/C/: Types.hs
basement/Basement/Numerical/: Additive.hs  Conversion.hs  Multiplicative.hs  Number.hs  Subtractive.hs
basement/Basement/Sized/: Block.hs  BlockN.hs  List.hs  UVect.hs  Vect.hs
basement/Basement/String/: Addr.hs  BA.hs  Builder.hs
basement/Basement/String/Encoding/: ASCII7.hs  Encoding.hs  ISO_8859_1.hs  UTF16.hs  UTF32.hs
basement/Basement/Terminal/: ANSI.hs  Size.hsc
basement/Basement/Types/: AsciiString.hs  Char7.hs  OffsetSize.hs  Ptr.hs  Word128.hs  Word256.hs
basement/Basement/UArray/: Addr.hs  BA.hs  Base.hs  Mutable.hs
basement/Basement/UTF8/: Addr.hs  BA.hs  Base.hs  Helper.hs  Table.hs  Types.hs
basement/cbits/: foundation_rts.c  foundation_system.h  foundation_terminal.c
benchs/: Array.hs  Break.hs  Buildable.hs  Main.hs  ProfBreak.hs  SplitAt.hs  Sys.hs  ToForeign.hs
cbits/: endian.c  foundation_mem.c  foundation_network.c  foundation_network.h  foundation_random.c  foundation_system.h  foundation_time.c  foundation_utf8.c
docs/: Advanced.md  CHANGELOG.md  contributing.md  core-collection.md  core-numerical.md  home.md  improvements.md  index.md  porting.md
edge/: .gitignore  README.md  foundation-edge.cabal
edge/Foundation/Compat/: ByteString.hs  Text.hs
foundation/: foundation.cabal
programs/: CSV.hs  InputOutputLines.hs  JSON.hs  SumDouble.hs  Time.hs  foundation-programs.cabal  stack.yaml
scripts/: CaseFolding.hs  CaseMapping.hs  UnicodeParsers.hs  algorithms.sh
sys/: sys.cabal
sys/SysDep/: Linux.hs  MacOS.hs  Posix.hs  Windows.hs
sys/SysDep/Linux/: Constants.hsc  File.hsc  Inotify.hsc  Types.hsc
sys/SysDep/MacOS/: Constants.hsc  MachTime.hsc
sys/SysDep/Posix/: Constants.hsc  Directory.hsc  File.hsc  Functions.hsc  Memory.hsc  Terminal.hsc  Types.hs
tests/: Checks.hs  DocTest.hs  Encoding.hs  ForeignUtils.hs  Imports.hs  Parser.hs  Tests.hs
(+233 files in other folders)
