Name:                foundation-edge
Version:             0.0.2
Synopsis:            foundation's edge with the conventional set of packages
Description:
    A set of functions to allow interaction with more conventional
    and well established packages like bytestring, text, vector
    .
    Current support:
    .
    * bytestring
    .
    * text
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          vincent@snarc.org
Category:            foundation
Stability:           experimental
Build-Type:          Simple
Homepage:            https://github.com/haskell-foundation/foundation-edge
Bug-Reports:         https://github.com/haskell-foundation/foundation-edge/issues
Cabal-Version:       >=1.10
tested-with:         GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.1
extra-source-files:  README.md

source-repository head
  type: git
  location: https://github.com/haskell-foundation/hs-foundation

Library
  Exposed-modules:    Foundation.Compat.ByteString
                    , Foundation.Compat.Text
  Default-Extensions: NoImplicitPrelude
                      TypeFamilies
                      BangPatterns
                      DeriveDataTypeable
  Build-depends:      foundation >= 0.0.7
                    , bytestring
                    , text
  ghc-options:        -Wall
  default-language:   Haskell2010
