Name:                foundation-programs
Version:             0
Build-Type:          Simple
Cabal-Version:       >=1.10

executable sum-double
  hs-source-dirs:      .
  main-is:             SumDouble.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       foundation
  default-language:    Haskell2010

executable input-output-lines
  hs-source-dirs:      .
  main-is:             InputOutputLines.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       foundation
  default-language:    Haskell2010

executable time
  hs-source-dirs:      .
  main-is:             Time.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       foundation
                     , base
                     , criterion
  default-language:    Haskell2010
  cpp-options: -DUSE_CRITERION

executable CSV
  hs-source-dirs:      .
  main-is:             CSV.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       foundation
                     , base
                     , criterion
  default-language:    Haskell2010
  cpp-options: -DUSE_CRITERION

executable json
  hs-source-dirs:      .
  main-is:             JSON.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       foundation
  default-language:    Haskell2010
